@@ -94,7 +94,7 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 		final JSONArray groups = new JSONArray();
 
 		for (final CMGroup group : allGroups) {
-			final JSONObject jsonGroup = Serializer.serialize(group);
+			final JSONObject jsonGroup = new Serializer(authLogic()).serialize(group);
 			groups.put(jsonGroup);
 		}
 
@@ -138,7 +138,7 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 		}
 
 		final JSONObject out = new JSONObject();
-		out.put(GROUP, Serializer.serialize(createdOrUpdatedGroup));
+		out.put(GROUP, new Serializer(authLogic()).serialize(createdOrUpdatedGroup));
 		return out;
 	}
 
@@ -151,7 +151,7 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 		final CMGroup group = groupsLogic().setGroupActive(groupId, active);
 
 		final JSONObject out = new JSONObject();
-		out.put(GROUP, Serializer.serialize(group));
+		out.put(GROUP, new Serializer(authLogic()).serialize(group));
 		return out;
 	}
 
@@ -173,9 +173,9 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 				}
 				notAssociatedUsers.add(user);
 			}
-			out.put(USERS, Serializer.serializeUsers(notAssociatedUsers));
+			out.put(USERS, new Serializer(authLogic()).serializeUsers(notAssociatedUsers));
 		} else {
-			out.put(USERS, Serializer.serializeUsers(associatedUsers));
+			out.put(USERS, new Serializer(authLogic()).serializeUsers(associatedUsers));
 		}
 
 		return out;
@@ -423,7 +423,7 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 			@Parameter(value = ACTIVE, required = false) final boolean activeOnly //
 	) throws JSONException, AuthException {
 		final JSONObject out = new JSONObject();
-		out.put(ROWS, Serializer.serializeUsers(authLogic().getAllUsers(activeOnly)));
+		out.put(ROWS, new Serializer(authLogic()).serializeUsers(authLogic().getAllUsers(activeOnly)));
 		return out;
 	}
 
@@ -473,7 +473,7 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 		}
 
 		final JSONObject out = new JSONObject();
-		out.put(ROWS, Serializer.serialize(createdOrUpdatedUser));
+		out.put(ROWS, new Serializer(authLogic()).serialize(createdOrUpdatedUser));
 		return out;
 	}
 
@@ -495,7 +495,7 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 		for (final String name : user.getGroupNames()) {
 			groupsForLogin.add(authLogic.getGroupInfoForGroup(name));
 		}
-		final JSONArray jsonGroupList = Serializer.serializeGroupsForUser(user, groupsForLogin);
+		final JSONArray jsonGroupList = new Serializer(authLogic()).serializeGroupsForUser(user, groupsForLogin);
 
 		final JSONObject out = new JSONObject();
 		out.put(RESULT, jsonGroupList);
@@ -517,7 +517,7 @@ public class ModSecurity extends JSONBaseWithSpringContext {
 		}
 
 		final JSONObject out = new JSONObject();
-		out.put(ROWS, Serializer.serialize(user));
+		out.put(ROWS, new Serializer(authLogic()).serialize(user));
 		return out;
 	}
 
